# tinyrenderer

./: CMakeLists.txt  Debug.hpp  Vec.cpp  Vec.h  debug_utils.hpp  geometry.h  main.cpp
